Adding babel and preparing for production
